# rust-renderer

./: .lite_project.lua  Cargo.toml  proposal.md  test.bat
res/: shaders.glsl
src/: main.rs
src/graphics/: api.rs  gl.rs  tex.rs
src/graphics/api/: api.rs  gl.rs  mod.rs  tex.rs
