[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.7.2"
glow = "0.11.2"
glutin = "0.29.1"
# Features:
# - bundled
# - c_vec
# - gfx
# - hidapi
# - image
# - mixer
# - raw-window-handle
# - static-link
# - ttf
# - unsafe_textures
# - use-bindgen
# - use-pkgconfig
# - use-vcpkg
# - use_mac_framework


[dev-dependencies]
rand = "0.8.5"
