[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.7.2"
glow = "0.11.2"
glutin = "0.29.1"
ttf-parser = "0.15.2"
rand = "0.8.5"
winit = "0.27.2"
image = "0.24.4"


